@@ -15,7 +15,9 @@
     <properties>
         <picocli.version>4.7.5</picocli.version>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
-        <jlink.jdk.home>/opt/installers/jdk-semeru/jdk-25.0.2+10</jlink.jdk.home>
+        <jlink.exec.home>/opt/installers/jdk-semeru/jdk-25.0.2+10</jlink.exec.home>
+        <jlink.jmods.home>/opt/installers/jdk-semeru/jdk-25.0.2+10</jlink.jmods.home>
+        <jlink.jmods.darwin-x64>/opt/installers/jdk-semeru-mac-x64/Contents/Home</jlink.jmods.darwin-x64>
         <jlink.jre.home>/opt/installers/jre-semeru/jdk-25.0.2+10-jre</jlink.jre.home>
         <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
         <jaxb-runtime.version>4.0.5</jaxb-runtime.version>
@@ -204,7 +206,7 @@
             <!-- TODO: Add jdep based dynamic detection here? -->
             <properties>
                 <jlink.runtime.module.path>${project.build.directory}/${project.artifactId}-${project.version}.jar:${settings.localRepository}/info/picocli/picocli/${picocli.version}/picocli-${picocli.version}.jar:${settings.localRepository}/jakarta/xml/bind/jakarta.xml.bind-api/${jakarta.xml.bind-api.version}/jakarta.xml.bind-api-${jakarta.xml.bind-api.version}.jar:${settings.localRepository}/jakarta/activation/jakarta.activation-api/2.1.3/jakarta.activation-api-2.1.3.jar:${settings.localRepository}/org/glassfish/jaxb/jaxb-runtime/${jaxb-runtime.version}/jaxb-runtime-${jaxb-runtime.version}.jar:${settings.localRepository}/org/glassfish/jaxb/jaxb-core/${jaxb-runtime.version}/jaxb-core-${jaxb-runtime.version}.jar:${settings.localRepository}/org/eclipse/angus/angus-activation/2.0.2/angus-activation-2.0.2.jar:${settings.localRepository}/org/glassfish/jaxb/txw2/${jaxb-runtime.version}/txw2-${jaxb-runtime.version}.jar:${settings.localRepository}/com/sun/istack/istack-commons-runtime/4.1.2/istack-commons-runtime-4.1.2.jar:${settings.localRepository}/com/fasterxml/jackson/core/jackson-databind/${jackson-databind.version}/jackson-databind-${jackson-databind.version}.jar:${settings.localRepository}/com/fasterxml/jackson/core/jackson-core/${jackson-databind.version}/jackson-core-${jackson-databind.version}.jar:${settings.localRepository}/com/fasterxml/jackson/core/jackson-annotations/${jackson-databind.version}/jackson-annotations-${jackson-databind.version}.jar:${settings.localRepository}/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/${jackson-databind.version}/jackson-datatype-jsr310-${jackson-databind.version}.jar:${settings.localRepository}/jakarta/inject/jakarta.inject-api/${jakarta.inject-api.version}/jakarta.inject-api-${jakarta.inject-api.version}.jar</jlink.runtime.module.path>
-                <jlink.module.path>${jlink.runtime.module.path}:${jlink.jdk.home}/jmods</jlink.module.path>
+                <jlink.module.path>${jlink.runtime.module.path}:${jlink.jmods.home}/jmods</jlink.module.path>
             </properties>
             <build>
                 <plugins>
@@ -252,7 +254,7 @@
                                 <goals><goal>run</goal></goals>
                                 <configuration>
                                     <target>
-                                        <exec executable="${jlink.jdk.home}/bin/jar" failonerror="true"
+                                        <exec executable="${jlink.exec.home}/bin/jar" failonerror="true"
                                               dir="${project.build.directory}/classes">
                                             <arg value="--update"/>
                                             <arg value="--file=${project.build.directory}/${project.artifactId}-${project.version}.jar"/>
@@ -267,7 +269,7 @@
                                 <goals><goal>run</goal></goals>
                                 <configuration>
                                     <target>
-                                        <exec executable="${jlink.jdk.home}/bin/jlink" failonerror="true">
+                                        <exec executable="${jlink.exec.home}/bin/jlink" failonerror="true">
                                             <arg value="--version"/>
                                         </exec>
                                     </target>
@@ -280,7 +282,7 @@
                                 <configuration>
                                     <target>
                                         <delete dir="${project.build.directory}/jlink-image"/>
-                                        <exec executable="${jlink.jdk.home}/bin/jlink" failonerror="true">
+                                        <exec executable="${jlink.exec.home}/bin/jlink" failonerror="true">
                                             <arg value="--module-path"/>
                                             <arg value="${jlink.module.path}"/>
                                             <arg value="--add-modules"/>
@@ -293,6 +295,45 @@
                                             <arg value="zip-9"/>
                                             <arg value="--output"/>
                                             <arg value="${project.build.directory}/jlink-image"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                            </execution>
+                            <!-- Copy linux image to platform-named dir for PublishRelease -->
+                            <execution>
+                                <id>jlink-copy-linux-x64</id>
+                                <phase>package</phase>
+                                <goals><goal>run</goal></goals>
+                                <configuration>
+                                    <target>
+                                        <delete dir="${project.build.directory}/jlink-image-linux-x64"/>
+                                        <copy todir="${project.build.directory}/jlink-image-linux-x64">
+                                            <fileset dir="${project.build.directory}/jlink-image"/>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
+                            <!-- Cross-compile macOS x64 image using Linux jlink + Mac jmods -->
+                            <execution>
+                                <id>jlink-build-darwin-x64</id>
+                                <phase>package</phase>
+                                <goals><goal>run</goal></goals>
+                                <configuration>
+                                    <target>
+                                        <delete dir="${project.build.directory}/jlink-image-darwin-x64"/>
+                                        <exec executable="${jlink.exec.home}/bin/jlink" failonerror="true">
+                                            <arg value="--module-path"/>
+                                            <arg value="${jlink.runtime.module.path}:${jlink.jmods.darwin-x64}/jmods"/>
+                                            <arg value="--add-modules"/>
+                                            <arg value="io.bitken.shipsmooth.tasks,openj9.sharedclasses"/>
+                                            <arg value="--launcher"/>
+                                            <arg value="shipsmooth-tasks=io.bitken.shipsmooth.tasks/io.bitken.shipsmooth.tasks.TasksCli"/>
+                                            <arg value="--no-header-files"/>
+                                            <arg value="--no-man-pages"/>
+                                            <arg value="--compress"/>
+                                            <arg value="zip-9"/>
+                                            <arg value="--output"/>
+                                            <arg value="${project.build.directory}/jlink-image-darwin-x64"/>
                                         </exec>
                                     </target>
                                 </configuration>
